--- a/vista/Assets/Css/Styles.css
+++ b/vista/Assets/Css/Styles.css
@@ -2,7 +2,15 @@ body{
     background-color: #0f0e17;
     
 }
-footer, header{
+header{
     background-color: #f25f4c;
 }
 
+footer{
+    background-color: #f25f4c;
+    margin-top: 64px;
+}
+
+#tituloSeguro {
+    margin-left: 400px;
+}
